# VoxelEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AABB.h  Camera.h  Chunk.h  Collisions.h  InputManager.h  Player.h  Shader.h  TextureManager.h  ThreadPool.h  Voxel.h  World.h  stb_image.h
shaders/: skybox.vsh
src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Collisions.cpp  Collisions.h  InputManager.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  TextureManager.cpp  TextureManager.h  ThreadPool.cpp  ThreadPool.h  Voxel.h  World.cpp  World.h  default.fsh  glad.c
src/shaders/: default.fsh  default.vsh
